# mackerel

./: CMakeLists.txt  Jamroot  README.md
libraries/atermpp/: CMakeLists.txt
libraries/atermpp/test/: CMakeLists.txt  Jamfile.v2
libraries/core/: CMakeLists.txt
libraries/core/source/: core.cpp  mcrl2_syntax.c  mcrl2_syntax.g  mcrl2_syntax.g.d_parser.h
libraries/core/test/: CMakeLists.txt  Jamfile.v2  print_test.cpp
libraries/data/: CMakeLists.txt
libraries/data/include/mcrl2/data/: builder.h  data_expression.h  data_specification.h  enumerator.h  fourier_motzkin.h  linear_inequalities.h  normalize_sorts.h  parse.h  print.h  rewriter.h  traverser.h  typecheck.h  untyped_variable_assignment.h  variable.h  variable_assignment.h
libraries/data/source/: data.cpp  typecheck.cpp
libraries/data/test/: CMakeLists.txt  Jamfile.v2
libraries/lps/: CMakeLists.txt
libraries/lps/include/mcrl2/lps/: ltsmin.h  multi_action.h  next_state_generator.h  simulation.h
libraries/lps/source/: next_state_generator.cpp
libraries/lps/test/: CMakeLists.txt  Jamfile.v2  next_state_generator_test.cpp  symbolic_reachability_test.cpp
libraries/lts/: CMakeLists.txt
libraries/lts/include/mcrl2/lts/: lts.h  parse.h  parse_fsm_specification_dparser.h  parse_fsm_specification_lex_yacc.h  remove_duplicate_transitions.h  remove_tau_action.h  remove_unused_states.h
libraries/lts/source/: exploration.cpp  fsm_syntax.c  fsm_syntax.g.d_parser.h
libraries/lts/source/archive/: liblts_fsmlexer.cpp  liblts_fsmlexer.h  liblts_fsmparser.cpp  liblts_fsmparser.h
libraries/lts/test/: CMakeLists.txt  Jamfile.v2  linearization_instantiation_compare_test.cpp  lps2lts_test.cpp  parse_test.cpp
libraries/lts/test/archive/: parse_fsm_test.cpp
libraries/lts/test/test_headers/: Jamfile.v2
libraries/lts_new/: CMakeLists.txt
libraries/lts_new/include/mcrl2/lts_new/: lts.h  parse.h  remove_duplicate_transitions.h  remove_tau_action.h  remove_unused_states.h
libraries/lts_new/test/: CMakeLists.txt  Jamfile.v2  parse_test.cpp
libraries/process/: CMakeLists.txt
libraries/process/include/mcrl2/process/: eliminate_single_usage_equations.h  eliminate_unused_equations.h  instantiate.h  (+7 more)
libraries/process/test/: CMakeLists.txt  Jamfile.v2
libraries/trace/: CMakeLists.txt
libraries/trace/test/: Jamfile.v2
libraries/utilities/: CMakeLists.txt
libraries/utilities/test/: CMakeLists.txt  Jamfile.v2
status/: Jamfile.v2
tools/: Jamfile.v2
tools/lps32lts/: CMakeLists.txt  Jamfile.v2  lps32lts.cpp
tools/ltstransform/: CMakeLists.txt  Jamfile.v2  ltstransform.cpp
tools/mcrl32lps/: CMakeLists.txt  Jamfile.v2  mcrl32lps.cpp
tools/mcrl3explore/: CMakeLists.txt  Jamfile.v2  mcrl3explore.cpp
tools/mcrl3linearize/: CMakeLists.txt  Jamfile.v2  mcrl3linearize.cpp
tools/mcrl3transform/: CMakeLists.txt  Jamfile.v2  mcrl3transform.cpp
(+10 files in other folders)
