project(MACKEREL)

cmake_minimum_required(VERSION 3.5.1)

if (WIN32)
  if(MSVC)
    add_definitions(-D_SCL_SECURE_NO_WARNINGS)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(/wd4819)
  endif(MSVC)
endif (WIN32)

add_definitions(-DMCRL2_NO_SOUNDNESS_CHECKS)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(CMAKE_COMPILER_IS_GNUCXX)
  set (CMAKE_CXX_FLAGS "-fPIC")
endif(CMAKE_COMPILER_IS_GNUCXX)

include_directories(3rd-party/dparser)
include_directories(build/workarounds)
include_directories(libraries/atermpp/include)
include_directories(libraries/core/include)
include_directories(libraries/data/include)
include_directories(libraries/lps/include)
include_directories(libraries/lts/include)
include_directories(libraries/process/include)
include_directories(libraries/trace/include)
include_directories(libraries/utilities/include)
include_directories( ${Boost_INCLUDE_DIRS} )

add_subdirectory(3rd-party/dparser)
add_subdirectory(libraries/atermpp)
add_subdirectory(libraries/core)
add_subdirectory(libraries/data)
add_subdirectory(libraries/lps)
add_subdirectory(libraries/lts)
add_subdirectory(libraries/process)
add_subdirectory(libraries/utilities)

add_subdirectory(tools/mcrl3explore)
add_subdirectory(tools/mcrl32lps)
add_subdirectory(tools/mcrl3linearize)
add_subdirectory(tools/mcrl3transform)
